// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BillingPaymentMethod Shopify should render a button 1`] = `
<BillingPaymentMethodContainer
  creditCard={Immutable.Map {}}
  currentAccountDomain="foo"
  currentPlan={
    Immutable.Map {
      "amount": 12,
      "currencySign": "$",
    }
  }
  currentUserId="1"
  fetchCreditCard={
    [MockFunction] {
      "calls": Array [
        Array [],
        Array [],
        Array [],
        Array [],
        Array [],
        Array [],
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": Promise {},
        },
        Object {
          "type": "return",
          "value": Promise {},
        },
        Object {
          "type": "return",
          "value": Promise {},
        },
        Object {
          "type": "return",
          "value": Promise {},
        },
        Object {
          "type": "return",
          "value": Promise {},
        },
        Object {
          "type": "return",
          "value": Promise {},
        },
        Object {
          "type": "return",
          "value": Promise {},
        },
      ],
    }
  }
  fetchPaymentMethod={
    [MockFunction] {
      "calls": Array [
        Array [],
        Array [],
        Array [],
        Array [],
        Array [],
        Array [],
        Array [],
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": Promise {},
        },
        Object {
          "type": "return",
          "value": Promise {},
        },
        Object {
          "type": "return",
          "value": Promise {},
        },
        Object {
          "type": "return",
          "value": Promise {},
        },
        Object {
          "type": "return",
          "value": Promise {},
        },
        Object {
          "type": "return",
          "value": Promise {},
        },
        Object {
          "type": "return",
          "value": Promise {},
        },
        Object {
          "type": "return",
          "value": Promise {},
        },
      ],
    }
  }
  paymentMethod="shopify"
  shopifyBillingStatus="inactive"
  subscription={
    Immutable.Map {
      "plan": "basic-usd-1",
    }
  }
>
  <div
    className="wrapper"
  >
    <BillingHeader
      icon="credit_card"
    >
      <h4
        className="header"
      >
        <i
          className="icon material-icons"
        >
          credit_card
        </i>
        Payment method
      </h4>
    </BillingHeader>
    <Card
      tag="div"
    >
      <div
        className="card"
      >
        <CardBody
          tag="div"
        >
          <div
            className="card-body"
          >
            <div
              id="activate-shopify-billing-button"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <a
                className=""
                href="/integrations/shopify/billing/activate/"
              >
                <ForwardRef
                  isDisabled={false}
                  isLoading={false}
                  onClick={[Function]}
                >
                  <BaseButton
                    isDisabled={false}
                    isLoading={false}
                  >
                    <button
                      className="wrapper fill primary medium"
                      disabled={false}
                      onClick={[Function]}
                      type="button"
                    >
                      Activate billing with Shopify and pay $12
                    </button>
                  </BaseButton>
                </ForwardRef>
              </a>
              <TaxDisclaimer
                className="taxDisclaimer"
              >
                <div
                  className="wrapper taxDisclaimer"
                >
                  * Prices do not include
                   
                  <a
                    href="https://www.gorgias.com/pricing/billing-sales-tax"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    sales tax
                  </a>
                </div>
              </TaxDisclaimer>
            </div>
          </div>
        </CardBody>
      </div>
    </Card>
  </div>
</BillingPaymentMethodContainer>
`;

exports[`BillingPaymentMethod Shopify should render a button to reactivate billing 1`] = `
<div
  className="wrapper"
>
  <BillingHeader
    icon="credit_card"
  >
    Payment method
  </BillingHeader>
  <Card
    tag="div"
  >
    <CardBody
      tag="div"
    >
      <div
        className="content"
      >
        <i
          className="statusIcon material-icons text-warning md-2"
        >
          warning
        </i>
         
        Billing with Shopify is inactive. Please reactivate to avoid account cancellation.
         
        <a
          className="float-right"
          href="/integrations/shopify/billing/activate/"
        >
          <ForwardRef
            isLoading={false}
            onClick={[Function]}
          >
            Reactivate billing with Shopify
          </ForwardRef>
        </a>
      </div>
    </CardBody>
  </Card>
</div>
`;

exports[`BillingPaymentMethod Shopify should render a disabled button 1`] = `
<div
  className="wrapper"
>
  <BillingHeader
    icon="credit_card"
  >
    Payment method
  </BillingHeader>
  <Card
    tag="div"
  >
    <CardBody
      tag="div"
    >
      <div
        id="activate-shopify-billing-button"
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <a
          className="disabledLink"
          href="/integrations/shopify/billing/activate/"
        >
          <ForwardRef
            isDisabled={true}
            isLoading={false}
            onClick={[Function]}
          >
            Activate billing with Shopify
          </ForwardRef>
        </a>
        <TaxDisclaimer
          className="taxDisclaimer"
        />
        <UncontrolledTooltip
          placement="top"
          target="activate-shopify-billing-button"
        >
          Select a plan before activating Shopify billing
        </UncontrolledTooltip>
      </div>
    </CardBody>
  </Card>
</div>
`;

exports[`BillingPaymentMethod Shopify should render an active status 1`] = `
<BillingPaymentMethodContainer
  creditCard={Immutable.Map {}}
  currentAccountDomain="foo"
  currentPlan={Immutable.Map {}}
  currentUserId="1"
  fetchCreditCard={
    [MockFunction] {
      "calls": Array [
        Array [],
        Array [],
        Array [],
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": Promise {},
        },
        Object {
          "type": "return",
          "value": Promise {},
        },
        Object {
          "type": "return",
          "value": Promise {},
        },
        Object {
          "type": "return",
          "value": Promise {},
        },
      ],
    }
  }
  fetchPaymentMethod={
    [MockFunction] {
      "calls": Array [
        Array [],
        Array [],
        Array [],
        Array [],
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": Promise {},
        },
        Object {
          "type": "return",
          "value": Promise {},
        },
        Object {
          "type": "return",
          "value": Promise {},
        },
        Object {
          "type": "return",
          "value": Promise {},
        },
        Object {
          "type": "return",
          "value": Promise {},
        },
      ],
    }
  }
  paymentMethod="shopify"
  shopifyBillingStatus="active"
  subscription={
    Immutable.Map {
      "plan": "basic-usd-1",
    }
  }
>
  <div
    className="wrapper"
  >
    <BillingHeader
      icon="credit_card"
    >
      <h4
        className="header"
      >
        <i
          className="icon material-icons"
        >
          credit_card
        </i>
        Payment method
      </h4>
    </BillingHeader>
    <Card
      tag="div"
    >
      <div
        className="card"
      >
        <CardBody
          tag="div"
        >
          <div
            className="card-body"
          >
            <div
              className="content"
            >
              <i
                className="statusIcon material-icons text-success md-2"
              >
                check_circle
              </i>
               
              Payment with Shopify is active. You're all set.
            </div>
          </div>
        </CardBody>
      </div>
    </Card>
  </div>
</BillingPaymentMethodContainer>
`;

exports[`BillingPaymentMethod Stripe should render a button 1`] = `
<BillingPaymentMethodContainer
  creditCard={Immutable.Map {}}
  currentAccountDomain="foo"
  currentPlan={Immutable.Map {}}
  currentUserId="1"
  fetchCreditCard={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": Promise {},
        },
      ],
    }
  }
  fetchPaymentMethod={
    [MockFunction] {
      "calls": Array [
        Array [],
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": Promise {},
        },
        Object {
          "type": "return",
          "value": Promise {},
        },
      ],
    }
  }
  paymentMethod="stripe"
  shopifyBillingStatus="inactive"
  subscription={
    Immutable.Map {
      "plan": "basic-usd-1",
    }
  }
>
  <div
    className="wrapper"
  >
    <BillingHeader
      icon="credit_card"
    >
      <h4
        className="header"
      >
        <i
          className="icon material-icons"
        >
          credit_card
        </i>
        Payment method
      </h4>
    </BillingHeader>
    <Card
      tag="div"
    >
      <div
        className="card"
      >
        <CardBody
          tag="div"
        >
          <div
            className="card-body"
          >
            <Row
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <div
                className="row"
              >
                <Col
                  className="content"
                  sm={8}
                  tag="div"
                  widths={
                    Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ]
                  }
                >
                  <div
                    className="content col-sm-8"
                  >
                    No credit card registered
                  </div>
                </Col>
                <Col
                  className="text-right"
                  sm={4}
                  tag="div"
                  widths={
                    Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ]
                  }
                >
                  <div
                    className="text-right col-sm-4"
                  >
                    <div
                      id="add-payment-method-button"
                      style={
                        Object {
                          "display": "inline-block",
                        }
                      }
                    >
                      <Link
                        className=""
                        to="/app/settings/billing/add-payment-method"
                      >
                        <a
                          className=""
                          to="/app/settings/billing/add-payment-method"
                        >
                          <ForwardRef
                            isDisabled={false}
                          >
                            <BaseButton>
                              <button
                                className="wrapper fill primary medium"
                                type="button"
                              >
                                Add payment method
                              </button>
                            </BaseButton>
                          </ForwardRef>
                        </a>
                      </Link>
                    </div>
                  </div>
                </Col>
              </div>
            </Row>
          </div>
        </CardBody>
      </div>
    </Card>
  </div>
</BillingPaymentMethodContainer>
`;

exports[`BillingPaymentMethod Stripe should render a button to update a credit card 1`] = `
<BillingPaymentMethodContainer
  creditCard={
    Immutable.Map {
      "brand": "Visa",
      "last4": 4242,
      "exp_month": 9,
      "exp_year": 2017,
    }
  }
  currentAccountDomain="foo"
  currentPlan={Immutable.Map {}}
  currentUserId="1"
  fetchCreditCard={
    [MockFunction] {
      "calls": Array [
        Array [],
        Array [],
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": Promise {},
        },
        Object {
          "type": "return",
          "value": Promise {},
        },
        Object {
          "type": "return",
          "value": Promise {},
        },
      ],
    }
  }
  fetchPaymentMethod={
    [MockFunction] {
      "calls": Array [
        Array [],
        Array [],
        Array [],
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": Promise {},
        },
        Object {
          "type": "return",
          "value": Promise {},
        },
        Object {
          "type": "return",
          "value": Promise {},
        },
        Object {
          "type": "return",
          "value": Promise {},
        },
      ],
    }
  }
  paymentMethod="stripe"
  shopifyBillingStatus="inactive"
  subscription={
    Immutable.Map {
      "plan": "basic-usd-1",
    }
  }
>
  <div
    className="wrapper"
  >
    <BillingHeader
      icon="credit_card"
    >
      <h4
        className="header"
      >
        <i
          className="icon material-icons"
        >
          credit_card
        </i>
        Payment method
      </h4>
    </BillingHeader>
    <Card
      tag="div"
    >
      <div
        className="card"
      >
        <CardBody
          tag="div"
        >
          <div
            className="card-body"
          >
            <Row
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <div
                className="row"
              >
                <Col
                  className="content"
                  sm={8}
                  tag="div"
                  widths={
                    Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ]
                  }
                >
                  <div
                    className="content col-sm-8"
                  >
                    <span
                      className="cardLabel"
                    >
                      Visa
                       ending with
                       
                      <strong>
                        4242
                      </strong>
                    </span>
                  </div>
                </Col>
                <Col
                  className="text-right"
                  sm={4}
                  tag="div"
                  widths={
                    Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ]
                  }
                >
                  <div
                    className="text-right col-sm-4"
                  >
                    <Link
                      to="/app/settings/billing/change-credit-card"
                    >
                      <a
                        to="/app/settings/billing/change-credit-card"
                      >
                        <ForwardRef
                          intent="secondary"
                        >
                          <BaseButton
                            intent="secondary"
                          >
                            <button
                              className="wrapper fill secondary medium"
                              type="button"
                            >
                              Change card
                            </button>
                          </BaseButton>
                        </ForwardRef>
                      </a>
                    </Link>
                  </div>
                </Col>
              </div>
            </Row>
          </div>
        </CardBody>
      </div>
    </Card>
  </div>
</BillingPaymentMethodContainer>
`;

exports[`BillingPaymentMethod Stripe should render a disabled button 1`] = `
<div
  className="wrapper"
>
  <BillingHeader
    icon="credit_card"
  >
    Payment method
  </BillingHeader>
  <Card
    tag="div"
  >
    <CardBody
      tag="div"
    >
      <Row
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Col
          className="content"
          sm={8}
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          No credit card registered
        </Col>
        <Col
          className="text-right"
          sm={4}
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <div
            id="add-payment-method-button"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <Link
              className="disabledLink"
              to="/app/settings/billing/add-payment-method"
            >
              <ForwardRef
                isDisabled={true}
              >
                Add payment method
              </ForwardRef>
            </Link>
            <UncontrolledTooltip
              placement="top"
              target="add-payment-method-button"
            >
              Select a plan before adding a credit card
            </UncontrolledTooltip>
          </div>
        </Col>
      </Row>
    </CardBody>
  </Card>
</div>
`;

exports[`BillingPaymentMethod Stripe should render a loader 1`] = `
<BillingPaymentMethodContainer
  creditCard={Immutable.Map {}}
  currentAccountDomain="foo"
  currentPlan={Immutable.Map {}}
  currentUserId="1"
  fetchCreditCard={[MockFunction]}
  fetchPaymentMethod={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": Promise {},
        },
      ],
    }
  }
  paymentMethod="stripe"
  shopifyBillingStatus="inactive"
  subscription={Immutable.Map {}}
>
  <Loader
    inline={false}
    minHeight="500px"
    size="40px"
  >
    <div
      className="container"
    >
      <div
        className="inner"
        style={
          Object {
            "minHeight": "500px",
          }
        }
      >
        <i
          className="icon-custom icon-circle-o-notch md-spin"
          style={
            Object {
              "fontSize": "40px",
            }
          }
        />
      </div>
    </div>
  </Loader>
</BillingPaymentMethodContainer>
`;
